--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" th:href="@{/cart}">Корзина<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item" th:classappend="${activeTab == 'AddProduct' ? 'active' : ''}">
-                    <a class="nav-link" th:href="@{/add}">Добавить товар<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" th:href="@{/add}">Добавить товар(Администратор)<span class="sr-only">(current)</span></a>
                 </li>
                 <li sec:authorize="isAuthenticated()" class="nav-item"
                     th:classappend="${activeTab == 'Profile' ? 'active' : ''}">
